# LMS_connect_system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci_cd.yml
config/: celery.py  settings.py  urls.py
materials/: models.py  paginators.py  serializers.py  tasks.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py
materials/tests/: test_tasks.py  test_validators.py  test_views.py
nginx/: nginx.conf
payments/: filters.py  models.py  serializers.py  services.py  urls.py  views.py
payments/fixtures/: courses_fixture.json  lessons_fixture.json  payments_fixture.json  users_fixture.json
payments/migrations/: 0001_initial.py  0002_initial.py  0003_alter_payment_user.py  0004_payment_payment_url_payment_stripe_session_id.py  0005_alter_payment_payment_url_and_more.py
users/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_tasks.py
